src/main/java/com/example/user/error/UserNotFoundException.java
package com.example.user.error;

public class UserNotFoundException extends RuntimeException{
    public UserNotFoundException(Long id){
        super("User " + id + "Not found!");
    }
}
